src/objects/CHANNEL_ORDERS__COA_BatchConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting contains the configurations used by COA batch jobs.</description>
    <label>COA Batch Configuration</label>
    <fields>
        <fullName>CHANNEL_ORDERS__Alert_Email__c</fullName>
        <defaultValue>&quot;coa-notification@salesforce.com&quot;</defaultValue>
        <description>Email where errors will be sent if some errors happen in the batch jobs.</description>
        <label>Alert Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The batch size to use when executing the batch via the scheduler.</description>
        <inlineHelpText>The batch size to use when executing the batch via the scheduler.</inlineHelpText>
        <label>Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Cron_Expression__c</fullName>
        <defaultValue>&quot;0 0 * * * ?&quot;</defaultValue>
        <description>Cron Expression used for rescheduling batch jobs.</description>
        <label>Cron Expression</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Current_Retries__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If needed, re-tries will be made when callouts to org62 timeout.  This is the current number, which will not exceed the max defined in Max Retries.</description>
        <inlineHelpText>If needed, re-tries will be made when callouts to org62 timeout.  This is the current number, which will not exceed the max defined in Max Retries.</inlineHelpText>
        <label>Current Retries</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Last_Start_Date__c</fullName>
        <description>This is the date and time when the first in a chain of batches was executed.</description>
        <inlineHelpText>This is the date and time when the first in a chain of batches was executed.</inlineHelpText>
        <label>Last Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Last_Success_Date__c</fullName>
        <description>This is the timestamp of the completion date for the last successful execution of the batch job.</description>
        <inlineHelpText>This is the timestamp of the completion date for the last successful execution of the batch job.</inlineHelpText>
        <label>Last Success Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Max_Retries__c</fullName>
        <defaultValue>5</defaultValue>
        <description>If needed, re-tries will be made when callouts to org62 timeout. Re-tries attempts will not exceed this max.</description>
        <inlineHelpText>If needed, re-tries will be made when callouts to org62 timeout. Re-tries attempts will not exceed this max.</inlineHelpText>
        <label>Max Retries</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Query_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Query Size</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Start_Order_Product_Id__c</fullName>
        <label>Start Order ProductId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>